# adtof_plus_drum_transcription

./: .gitignore  MANIFEST.in  README.md  main_initial_dev.py  pyproject.toml  requirements.txt
adtof_plus_drum_transcription/: __init__.py  cli.py  core.py
adtof_plus_drum_transcription.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
